# mutual-fund-backend

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/config/: __init__.py
src/core/handlers/: auth.py  rapidapi.py  users.py
src/core/routers/: __init__.py  rapidapi.py  users.py
src/core/schemas/: rapidapi.py  responses.py  user.py
src/db/pg/: handler.py  ops.py  queries.py  sessions.py  sql_schemas.py
src/exceptions/: __init__.py
src/scheduler/: fund_schema.py
src/utils/: jwt_util.py  password.py
test/: test_main.py
